--- a/kiosk-flutter/pubspec.yaml
+++ b/kiosk-flutter/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   # Utils
   intl: ^0.19.0
   shared_preferences: ^2.2.2
+  wakelock_plus: ^1.2.11
 
 dev_dependencies:
   flutter_test:
